<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_900"
    tools:context=".ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logoView"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/pipper"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_into_piper_text"
                android:layout_below="@id/logoView"
                android:textSize="@dimen/text_size_28sp"
                android:textStyle="bold"
                android:textColor="@color/white_50"
                android:layout_marginTop="@dimen/size_36dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/infoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/headerText"
                android:text="@string/info_text"
                android:textColor="@color/white_400"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/align_margin"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/enterCodeEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:layout_below="@id/infoText"
                android:layout_marginTop="@dimen/size_36dp"
                android:hint="Enter Code"
                android:textColorHint="@color/brown_900"
                android:textColor="@color/brown_900"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_15sp"
                android:paddingStart="@dimen/size_36dp"
                tools:ignore="RtlSymmetry"
                android:drawableEnd="@drawable/baseline_content_paste_24"
                android:paddingEnd="10dp"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/activateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/activate_btn"
                android:layout_below="@id/enterCodeEt"
                android:textColor="@color/brown_900"
                android:layout_marginTop="@dimen/align_margin"
                android:text="@string/activate_pipper_account_text"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="16sp"/>
            
            <View
                android:id="@+id/viewLayout"
                android:layout_width="match_parent"
                android:layout_height="0.60dp"
                android:layout_below="@id/activateBtn"
                android:layout_marginTop="@dimen/align_margin"
                android:background="@color/white_50"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user_piper_text"
                android:layout_below="@id/viewLayout"
                android:textSize="@dimen/text_size_28sp"
                android:textStyle="bold"
                android:textColor="@color/white_50"
                android:layout_marginTop="@dimen/size_36dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/infoText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/headerText2"
                android:text="@string/info_text"
                android:textColor="@color/white_400"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/align_margin"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/purchaseBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/purchase_btn"
                android:layout_below="@id/infoText2"
                android:layout_marginTop="@dimen/size_36dp"
                android:text="@string/purchase_pipper_account_text"
                android:textAllCaps="false"
                android:textColor="@color/white_50"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>