<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_900"
    android:padding="@dimen/size_24dp"
    tools:context=".ui.CustomerSupportActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/headerView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_36dp"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backKey"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/back_icon"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/customer_support_tv"
                android:textColor="@color/white_50"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/align_margin"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerView"
            android:layout_above="@id/btnGroup">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/infoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/align_margin"
                android:text="@string/customer_support_info_tv"
                android:textColor="@color/white_400"
                android:textSize="15sp" />

        </ScrollView>

        <RelativeLayout
            android:id="@+id/btnGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/gmailBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_36dp"
                android:background="@drawable/purchase_fb_tele"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gmail_icon" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gmailLinkTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/piper_email_tv"
                    android:fontFamily="@font/outfit_semibold"
                    android:textColor="@color/brown_900"
                    android:textSize="@dimen/text_size_15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/teleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gmailBtn"
                android:layout_marginTop="@dimen/align_margin"
                android:layout_marginBottom="@dimen/align_margin"
                android:background="@drawable/purchase_fb_tele"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tele_icon" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="Piper Myanmar Telegram"
                    android:fontFamily="@font/outfit_semibold"
                    android:textColor="@color/brown_900"
                    android:textSize="@dimen/text_size_15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>